﻿============================== Next release ==============================

  new data (thanks to Lukas Perner, Universität Wien, Austria, for submitting data in YAML format!)
    other/semiconductor alloys/AlAs-GaAs/Perner.yml
  new data (thanks to Dr. Jonas Heidrich, Menhir Photonics AG, Glattbrugg, Switzerland, for suggesting data!)
    main/CaGdAlO4/Loiko-o.yml
    main/CaGdAlO4/Loiko-e.yml
    main/CaYAlO4/Loiko-o.yml
    main/CaYAlO4/Loiko-e.yml
  new data (thanks to Jan Suffczyński, University of Warsaw, Poland, for submitting data!)
    main/ScAlMgO4/Stefaniuk-o.yml
    main/ScAlMgO4/Stefaniuk-e.yml
  new data (thanks to Osamu Takayama, Technical University of Denmark, Lyngby, Denmark, for submitting data!)
    main/Al2O3/Zhukovsky.yml
    main/TiO2/Zhukovsky.yml
    main/Si3N4/Beliaev.yml
  new data (thanks to Grigory Kropotov, TYDEX LLC, St. Petersburg, Russia, for submitting data in YAML format!)
    glass/lzos/K108/Bassarab.yml
  new data (thanks to Kristupas Tikuišis, Charles University, Prague, Czech Republic, for submitting data in YAML format!)
    main/C/Tikuisis.yml
  new data (thanks to Yago Arosa Lobato, Universidade de Santiago de Compostela, Spain!)
    main/SiO2/Arosa.yml
  new data (thanks to Georgy Ermolaev, Moscow Institute of Physics and Technology, Russia, for submitting data in YAML format!)
    main/BN/Grudinin-o.yml
    main/BN/Grudinin-e.yml
    main/BN/Grudinin-DFT-o.yml
    main/BN/Grudinin-DFT-e.yml
    other/perovskite/CsPbBr3/Ermolaev-o.yml
    other/perovskite/CsPbBr3/Ermolaev-e.yml
    other/perovskite/CsPbCl3/Ermolaev-o.yml
    other/perovskite/CsPbCl3/Ermolaev-e.yml
    other/perovskite/CsPb(Br,Cl)3/Ermolaev-Br1.3Cl1.7-o.yml
    other/perovskite/CsPb(Br,Cl)3/Ermolaev-Br1.3Cl1.7-e.yml
    other/perovskite/CsPb(Br,Cl)3/Ermolaev-Br1.8Cl1.2-o.yml
    other/perovskite/CsPb(Br,Cl)3/Ermolaev-Br1.8Cl1.2-e.yml
  new data (thanks to Michele Magnozzi, Istituto Nazionale di Fisica Nucleare, Genova, Italy, for submitting data!)