@@ -1,7 +1,9 @@
 ﻿============================== Next release ==============================
 
   new data (thanks to Lukas Perner, Universität Wien, Austria, for submitting data in YAML format!)
-    other/semiconductor alloys/AlAs-GaAs/Perner.yml
+    main/GaAs/Perner.yml
+    other/semiconductor alloys/AlAs-GaAs/Perner-0.yml
+    other/semiconductor alloys/AlAs-GaAs/Perner-92.9.yml
   new data (thanks to Dr. Jonas Heidrich, Menhir Photonics AG, Glattbrugg, Switzerland, for suggesting data!)
     main/CaGdAlO4/Loiko-o.yml
     main/CaGdAlO4/Loiko-e.yml
